--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -1,4 +1,9 @@
-<button class="btn btn-primary" [disabled] = "allowNewServer">Add server</button>
+<button class="btn btn-primary" [disabled] = "allowNewServer"
+(click)="onCreateServer()">Add server</button>
 <p [innerText] = "allowNewServer ? 'cannot add servers' : 'can add servers'"></p>
+
+<hr>
+
+<p>{{serverCreationStatus}}</p>
 <app-server></app-server>
 <app-server></app-server>
