--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -1,10 +1,14 @@
 <div class="container">
     <label>Server Name</label>
     <input type="text" class="form-control" [(ngModel)]="serverName">
-    <p>{{serverName}}</p>
     <hr>
-
     <button class="btn btn-primary" [disabled]="allowNewServer" (click)="onCreateServer()">Add server</button>
+
+    <hr>
+    <p *ngIf="serverCreated; else noServer">Created {{serverName}}</p>
+    <ng-template #noServer>
+        <p>No server created!</p>
+    </ng-template>
 </div>
 <app-server></app-server>
 <app-server></app-server>
