--- a/src/app/server/server.component.html
+++ b/src/app/server/server.component.html
@@ -1,1 +1,3 @@
-<h4>Server with id {{ id }} is {{ status ? 'online' : 'offline' }}</h4>
+<h4 [ngStyle]="{
+    color: getColor()
+}">Server with id {{ id }} is {{ online ? 'online' : 'offline' }}</h4>
